--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format": "prettier --write ./**/*.ts",
         "check-format": "prettier --check ./**/*.ts",
         "prepare": "husky install",
-        "test": "mocha --check-leaks -r ts-node/register ./test/**/*.test.ts",
+        "test": "mocha --require ts-node/register ./test/**/*.test.ts",
         "publish:npm": "npm publish --access public"
     },
     "keywords": [
@@ -49,30 +49,29 @@
     "dependencies": {
         "@types/express": "^4.17.21",
         "express": "^4.18.2",
-        "reflect-metadata": "^0.1.13",
-        "tslib": "^2.6.2"
+        "reflect-metadata": "^0.2.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@types/chai": "^4.3.11",
         "@types/mocha": "^10.0.6",
-        "@types/node": "^20.10.0",
-        "@types/supertest": "^2.0.16",
-        "@typescript-eslint/eslint-plugin": "^6.13.1",
-        "@typescript-eslint/parser": "^6.13.1",
-        "chai": "^4.3.10",
-        "eslint": "^8.54.0",
-        "eslint-plugin-prettier": "^5.0.1",
+        "@types/node": "^20.10.6",
+        "@types/supertest": "^6.0.2",
+        "@typescript-eslint/eslint-plugin": "^6.17.0",
+        "@typescript-eslint/parser": "^6.17.0",
+        "chai": "^5.0.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-prettier": "^5.1.2",
         "husky": "^8.0.3",
-        "lint-staged": "^15.1.0",
+        "lint-staged": "^15.2.0",
         "mocha": "^10.2.0",
-        "nodemon": "^3.0.1",
-        "prettier": "^3.1.0",
+        "nodemon": "^3.0.2",
+        "prettier": "^3.1.1",
         "rimraf": "^5.0.5",
         "supertest": "^6.3.3",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.3.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3",
         "zod": "^3.22.4"
     },
     "lint-staged": {
