--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,22 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "env": {
-        "es6": true,
-        "node": true
-    },
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    "overrides": [
-        {
-            "files": ["./**/*.ts"],
-            "parserOptions": {
-                "project": "./tsconfig.json"
-            }
-        }
-    ],
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended"],
+    "env": {
+        "node": true,
+        "es6": true
+    },
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
-        "no-unused-vars": 0
+        "@typescript-eslint/no-namespace": "warn",
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/ban-types": "warn",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-var-requires": "warn",
+        "@typescript-eslint/triple-slash-reference": "warn"
     }
 }
