--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,5 @@
     "tabWidth": 4,
     "semi": false,
     "singleQuote": true,
-    "endOfLine": "crlf",
-    "printWidth": 200,
-    "proseWrap": "always",
-    "useTabs": false,
-    "trailingComma": "none",
-    "bracketSpacing": true
+    "endOfLine": "crlf"
 }
