--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["codepaths", "commitlint", "elierosie", "Errback", "paramtypes", "tsbuildinfo"]
+    "cSpell.words": ["elierosie"]
 }
