--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "version": "1.2.0",
     "description": "A flexible web framework for building fast API (Application programming interface) and maintainable.",
     "scripts": {
-        "dev:example": "nodemon --exec ts-node -T ./example/index.ts",
-        "dev:example:di": "nodemon --exec ts-node -T ./example/ex.di.ts",
-        "build": "npm run clean && npx tsc --project ./tsconfig.build.json",
-        "clean": "rimraf ./dist ./.tsbuildinfo ./.eslintcache",
+        "ts-init": "npx tsc --init",
+        "dev": "nodemon --watch ./example --exec ts-node -T ./example/index.ts",
+        "build": "npm run clean  && npx tsc",
         "check-types": "npx tsc --pretty --noEmit",
-        "lint": "eslint . --ext .ts --cache --fix",
+        "lint": "eslint . --ext .ts --cache",
+        "lint:fix": "eslint . --ext .ts --cache --fix",
         "format": "prettier --write ./**/*.ts",
         "check-format": "prettier --check ./**/*.ts",
-        "prepare": "husky install",
-        "test": "mocha --require ts-node/register ./test/**/*.test.ts",
-        "publish:npm": "npm publish --access public"
+        "clean": "rimraf ./dist ./.tsbuildinfo ./.eslintcache",
+        "test": "jest",
+        "publish": "npm publish --access public"
     },
     "keywords": [
         "http",
@@ -42,9 +42,6 @@
         "./LICENSE",
         "./README.md"
     ],
-    "main": "./dist/index.js",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts",
     "sideEffects": false,
     "dependencies": {
         "@types/express": "^4.17.21",
@@ -52,35 +49,43 @@
         "reflect-metadata": "^0.2.1"
     },
     "devDependencies": {
-        "@commitlint/cli": "^18.4.3",
-        "@commitlint/config-conventional": "^18.4.3",
-        "@types/chai": "^4.3.11",
-        "@types/mocha": "^10.0.6",
+        "@types/jest": "^29.5.11",
         "@types/node": "^20.10.6",
-        "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^6.17.0",
         "@typescript-eslint/parser": "^6.17.0",
-        "chai": "^5.0.0",
         "eslint": "^8.56.0",
         "eslint-plugin-prettier": "^5.1.2",
         "husky": "^8.0.3",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.0",
-        "mocha": "^10.2.0",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.1",
         "rimraf": "^5.0.5",
-        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3",
         "zod": "^3.22.4"
     },
-    "lint-staged": {
-        "./**/*.ts": [
-            "prettier --write --ignore-unknown"
-        ]
-    },
     "engines": {
         "node": ">=20.0.0",
         "npm": ">=10.0.0"
+    },
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npx lint-staged"
+        }
+    },
+    "lint-staged": {
+        "./**/*.{ts,js}": ["prettier --write --ignore-unknown"]
     }
 }
