--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
         "@typescript-eslint/ban-types": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-var-requires": "warn",
-        "@typescript-eslint/triple-slash-reference": "warn"
+        "@typescript-eslint/triple-slash-reference": "warn",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
