--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/elierosie0/express-mod.git"
+        "url": "git+https://github.com/elierosie0/express-mod.git"
     },
     "bugs": {
         "url": "https://github.com/elierosie0/express-mod/issues"
