--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 
@@ -7,6 +9,3 @@
 # typescript
 *.tsbuildinfo
 *.eslintcache
-
-# debug
-npm-debug.log*
