--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,8 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "env": {
-        "node": true,
-        "es6": true
-    },
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-    "plugins": ["@typescript-eslint", "prettier"],
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "@typescript-eslint/no-namespace": "warn",
         "@typescript-eslint/no-explicit-any": "warn",
