--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "express-mod",
     "version": "1.2.2",
-    "description": "A flexible web framework for building fast API (Application programming interface) and maintainable.",
+    "description": "An open source web framework for building fast API (Application programming interface) is flexible and maintainable.",
     "scripts": {
         "ts-init": "npx tsc --init",
         "dev": "nodemon --watch ./example --exec ts-node -T ./example/index.ts",
@@ -54,17 +54,13 @@
         "@typescript-eslint/eslint-plugin": "^6.17.0",
         "@typescript-eslint/parser": "^6.17.0",
         "eslint": "^8.56.0",
-        "eslint-plugin-prettier": "^5.1.2",
-        "husky": "^8.0.3",
         "jest": "^29.7.0",
-        "lint-staged": "^15.2.0",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.1",
         "rimraf": "^5.0.5",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3",
-        "zod": "^3.22.4"
+        "typescript": "^5.3.3"
     },
     "engines": {
         "node": ">=20.0.0",
@@ -79,15 +75,5 @@
             "import": "./dist/index.js",
             "types": "./dist/index.d.ts"
         }
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npx lint-staged"
-        }
-    },
-    "lint-staged": {
-        "./**/*.{ts,js}": [
-            "prettier --write --ignore-unknown"
-        ]
     }
 }
