--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,10 @@
     "rules": {
         "@typescript-eslint/no-namespace": "warn",
         "@typescript-eslint/no-explicit-any": "warn",
-        "@typescript-eslint/ban-types": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-var-requires": "warn",
         "@typescript-eslint/triple-slash-reference": "warn",
+        "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/ban-ts-comment": "off"
     }
 }
