--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "plugins": ["@typescript-eslint"],
     "rules": {
-        "@typescript-eslint/no-namespace": "warn",
+        "@typescript-eslint/no-namespace": "off",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-var-requires": "warn",
