--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,4 @@
 {
     "extends": "./tsconfig.json",
-    "exclude": [
-        "./node_modules",
-        "./example",
-        "./dist",
-        "./test",
-        "./jest.config.ts"
-    ]
+    "exclude": ["./node_modules", "./example", "./dist", "./test", "./jest.config.ts"]
 }
